feat: Clean up of code
Also updated copyright statements